--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bulma": "^0.7.4",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vue-sweetalert2": "^1.0.7"
